Refactor type converters.